Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.43 [20180405] [svn: r767]
  - sg_write_x: where x can be normal, atomic, or(write),
    same, scattered, or stream writes with 16 or 32 byte
    cdbs (sbc4r04 for atomic, sbc4r11 for scattered)
  - sg_bg_ctl: new Background control command (sbc4r08)
  - sg_seek: new SEEK(10) or PRE-FETCH(10 or 16)
  - sg_stream_ctl: new, STREAM CONTROL or GET STREAM STATUS
  - sg_senddiag: add --timeout=SEC option
  - sg_sanitize: add --timeout=SEC option
  - sg_format: add --timeout=SEC option
    - add --dry-run option to bypass modifying behaviour
    - add --quick option to skip reconsideration time
  - sg_decode sense: add --cdb option
  - sg_ses: handle 2 bit EIIOE field in aes dpage
    - add --quiet option to suppress messages
    - expand join handling of SAS connectors and others
    - expand join debug code
    - allow multiple --clear=, --get= and --set= options
    - allow individual index ranges (e.g. --index=3-5)
    - allow --index=IIA with -ee to enumerate only fields
      belonging to element type IIA
    - --data=@FN with --status now decodes dpage(s) in FN
    - add 'offset_temp' and 'rqst_override' to temperature
      sensor element type
    - interpret '--join --page=aes' to only display join
      rows that have a corresponding AES dpage element
    - support NVMe attached enclosure via NVME-MI Send and
      Receive SES commands
    - decode array status diagnostic page (obsolete)
    - sync to ses4r01
  - sg_ses_microcode: add --dry-run and -ealsd options
  - sg_ses, sg_ses_microcode, sg_senddiag: make all access
    buffer page size aligned (typically page_size=4096)
  - sg_write_buffer: add --dry-run option
  - sg_luns: resync with drafts (sam6r02+spc5r10)
    - remove undocumented test "W" format