@@ -22,7 +22,7 @@ outputs the response. There is a 6 byte and 10 byte (cdb) variant of the
 MODE SENSE command, this utility defaults to the 10 byte variant. The SPC\-4
 standard (and SPC\-5 drafts) include a note stating that implementers should
 migrate away from the SCSI MODE SELECT(6) and MODE SENSE(6) commands in
-favour of the 10 byte variants (e.g.  MODE SEMSE(10)).
+favour of the 10 byte variants (e.g.  MODE SENSE(10)).
 .PP
 This utility decodes mode page headers and block descriptors but outputs
 the contents of each mode page in hex. It also has no facility to change
